--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.as": "asm",
         "pre_assembler.h": "c",
-        "macro_table.h": "c"
+        "macro_table.h": "c",
+        "typeinfo": "c"
     }
 }
