first pass recives correct file name (full path)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "typeinfo": "c",
         "tokenizer.h": "c",
         "string.h": "c",
-        "ast.h": "c"
+        "ast.h": "c",
+        "first_pass.h": "c",
+        "preprocessor.h": "c"
     }
 }
