Add syntax definition and new assembly program for matrix summation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "string.h": "c",
         "ast.h": "c",
         "first_pass.h": "c",
-        "preprocessor.h": "c"
+        "preprocessor.h": "c",
+        "table.h": "c"
     }
 }
