--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,10 @@
             "request": "launch",
             "program": "${workspaceFolder}/bin/am",
             "args": [
-                "src/pre_assembler/input.as"
-            ], // Or your test input file
+                "input/prog3/input.as",
+                "input/prog3/prog1.as",
+                "input/prog3/prog2.as"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
