parsing DATA and MAT directives including error detection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "table.h": "c",
         "encoding.h": "c",
         "stdlib.h": "c",
-        "ctype.h": "c"
+        "ctype.h": "c",
+        "file_utils.h": "c"
     }
 }
