refactor, moving functions to utils, printer module, and in-file functions order

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "encoding.h": "c",
         "stdlib.h": "c",
         "ctype.h": "c",
-        "file_utils.h": "c"
+        "file_utils.h": "c",
+        "utils.h": "c"
     }
 }
