--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "stdlib.h": "c",
         "ctype.h": "c",
         "file_utils.h": "c",
-        "utils.h": "c"
+        "utils.h": "c",
+        "printer.h": "c"
     }
 }
