--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "ctype.h": "c",
         "file_utils.h": "c",
         "utils.h": "c",
-        "printer.h": "c"
+        "printer.h": "c",
+        "errors.h": "c"
     }
 }
