ADDED second pass module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "file_utils.h": "c",
         "utils.h": "c",
         "printer.h": "c",
-        "errors.h": "c"
+        "errors.h": "c",
+        "second_pass.h": "c"
     }
 }
